--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -26,6 +26,13 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.play-icon:hover {
+    width: 65px;
+    opacity: 0.7;
 }
 
 .about h3 {
@@ -44,5 +51,21 @@
 .about p {
     color: #676767;
     margin-bottom: 15px;
+}
+
+@media (max-width: 800px) {
+    .about {
+        flex-direction: column;
+    }
+
+    .about-left {
+        flex-basis: 100%;
+        margin: 20px;
+        order: 2;
+    }
+
+    .about-right {
+        flex-basis: 100%;
+    }
 }
 
