--- a/src/Components/Campus/Campus.css
+++ b/src/Components/Campus/Campus.css
@@ -2,6 +2,7 @@
     margin: 80px auto;
     width: 90%;
     text-align: center;
+    position: relative;
 }
 
 .gallery {
@@ -9,9 +10,32 @@
     align-items: center;
     justify-content: space-between;
     margin-bottom: 40px;
+    transition: 0.3s;
+   
 }
 
 .gallery img {
     width: 23%;
     border-radius: 10px;
 }
+
+.hideGallery {
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+}
+
+/* ------------media----------- */
+
+@media (max-width: 800px) {
+   .gallery {
+    flex-wrap: wrap;
+   }
+
+   .gallery img {
+    width: 48%;
+    margin-bottom: 25px;
+   }
+}
+
